# ninovaNotifier

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  TODO.md  main.py  pyproject.toml  readme_en.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
bot/: __init__.py  callback_parsing.py  core.py  inline_keyboards.py  instance.py  keyboards.py  utils.py
bot/handlers/: __init__.py  admin.py  callbacks.py  commands.py
bot/handlers/admin/: __init__.py  callbacks.py  commands.py  course_functions.py  course_management.py  data_helpers.py  helpers.py  services.py
bot/handlers/user/: ari24_commands.py  audit.py  auth_commands.py  cafeteria_commands.py  callbacks.py  commands.py  course_commands.py  data_helpers.py  general_commands.py  grade_commands.py  rehber_commands.py
common/: __init__.py  background_tasks.py  cache.py  cache_manager.py  config.py  error_tracker.py  http_logging.py  log_context.py  logging_setup.py  session.py  utils.py  utils.py_snippet_delete
core/: __init__.py  config.py  logic.py  utils.py
ninova/: __init__.py  auth.py  file_utils.py  scanner.py  scraper.py
scripts/: bump_version.py
secrets/: .env.example
services/: __init__.py  visualization.py
services/ari24/: client.py
services/calendar/: __init__.py  itu_calendar.py
services/ninova/: __init__.py  auth.py  file_utils.py  scanner.py  scraper.py
services/rehber/: scraper.py
services/sks/: announcer.py  scraper.py
tests/: __init__.py  conftest.py  test_ari24_client.py  test_auth.py  test_bot_keyboards.py  test_bot_utils.py  test_cache.py  test_cache_manager.py  test_callback_parsing.py  test_common_cache.py  test_common_config.py  test_common_utils.py  test_course_detail.py  test_file_utils.py  test_itu_calendar.py  test_ninova_auth.py  test_ninova_file_sources.py  test_scraper.py  test_sks_scraper.py  test_url_validation.py  test_utils.py  test_visualization.py
