[project]
name = "ninovanotifier"
version = "0.2.1"
description = "Telegram bot that notifies about new grades on ninova"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "plyer>=2.1.0",
    "pytelegrambotapi>=4.29.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "cryptography>=41.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
